@@ -307,6 +307,147 @@ class PartyCategory(ModelSQL):
         ondelete='CASCADE', required=True, select=True)
 
 
+IDENTIFIER_TYPES = [
+    ('ad_nrt', "Andorra Tax Number"),
+    ('al_nipt', "Albanian VAT Number"),
+    ('ar_cuit', "Argentinian Tax Number"),
+    ('ar_dni', "Argentinian National Identity Number"),
+    ('at_businessid', "Austrian Company Register"),
+    ('at_tin', "Austrian Tax Identification"),
+    ('at_vnr', "Austrian Social Security Number"),
+    ('au_abn', "Australian Business Number"),
+    ('au_acn', "Australian Company Number"),
+    ('au_tfn', "Australian Tax File Number"),
+    ('be_vat', "Belgian Enterprise Number"),
+    ('bg_egn', "Bulgarian Personal Identity Codes"),
+    ('bg_pnf', "Bulgarian Number of a Foreigner"),
+    ('bg_vat', "Bulgarian VAT Number"),
+    ('br_cnpj', "Brazillian Company Identifier"),
+    ('br_cpf', "Brazillian National Identifier"),
+    ('by_unp', "Belarus VAT Number"),
+    ('ca_bn', "Canadian Business Number"),
+    ('ca_sin', "Canadian Social Insurance Number"),
+    ('ch_ssn', "Swiss Social Security Number"),
+    ('ch_uid', "Swiss Business Identifier"),
+    ('ch_vat', "Swiss VAT Number"),
+    ('cl_rut', "Chilean National Tax Number"),
+    ('cn_ric', "Chinese Resident Identity Card Number"),
+    ('cn_uscc', "Chinese Unified Social Credit Code"),
+    ('co_nit', "Colombian Identity Code"),
+    ('co_rut', "Colombian Business Tax Number"),
+    ('cr_cpf', "Costa Rica Physical Person ID Number"),
+    ('cr_cpj', "Costa Rica Tax Number"),
+    ('cr_cr', "Costa Rica Foreigners ID Number"),
+    ('cu_ni', "Cuban Identity Card Number"),
+    ('cy_vat', "Cypriot VAT Number"),
+    ('cz_dic', "Czech VAT Number"),
+    ('cz_rc', "Czech National Identifier"),
+    ('de_handelsregisternummer', "German Company Register Number"),
+    ('de_idnr', "German Personal Tax Number"),
+    ('de_stnr', "German Tax Number"),
+    ('de_vat', "German VAT Number"),
+    ('dk_cpr', "Danish Citizen Number"),
+    ('dk_cvr', "Danish VAT Number"),
+    ('do_cedula', "Dominican Republic National Identification Number"),
+    ('do_rnc', "Dominican Republic Tax"),
+    ('ec_ci', "Ecuadorian Personal Identity Code"),
+    ('ec_ruc', "Ecuadorian Tax Identification"),
+    ('ee_ik', "Estonian Personal ID Number"),
+    ('ee_kmkr', "Estonian VAT Number"),
+    ('ee_registrikood', "Estonian Organisation Registration Code"),
+    ('es_cif', "Spanish Company Tax"),
+    ('es_dni', "Spanish Personal Identity Codes"),
+    ('es_nie', "Spanish Foreigner Number"),
+    ('es_nif', "Spanish VAT Number"),
+    ('eu_at_02', "SEPA Identifier of the Creditor (AT-02)"),
+    ('eu_vat', "European VAT Number"),
+    ('fi_alv', "Finnish VAT Number"),
+    ('fi_associationid', "Finnish Association Identifier"),
+    ('fi_hetu', "Finnish Personal Identity Code"),
+    ('fi_veronumero', "Finnish Individual Tax Number"),
+    ('fi_ytunnus', "Finnish Business Identifier"),
+    ('fr_nif', "French Tax Identification Number"),
+    ('fr_nir', "French Personal Identification Number"),
+    # TODO: remove from party_siren
+    # ('fr_siren', "French Company Identification Number"),
+    ('fr_tva', "French VAT Number"),
+    ('gb_nhs',
+        "United Kingdom National Health Service Patient Identifier"),
+    ('gb_upn', "English Unique Pupil Number"),
+    ('gb_vat', "United Kingdom (and Isle of Man) VAT Number"),
+    ('gr_amka', "Greek Social Security Number"),
+    ('gr_vat', "Greek VAT Number"),
+    ('gt_nit', "Guatemala Tax Number"),
+    ('hr_oib', "Croatian Identification Number"),
+    ('hu_anum', "Hungarian VAT Number"),
+    ('id_npwp', "Indonesian VAT Number"),
+    ('ie_pps', "Irish Personal Number"),
+    ('ie_vat', "Irish VAT Number"),
+    ('il_hp', "Israeli Company Number"),
+    ('il_idnr', "Israeli Identity Number"),
+    ('in_aadhaar', "Indian Digital Resident Personal Identity Number"),
+    ('in_pan', "Indian Income Tax Identifier"),
+    ('is_kennitala',
+        "Icelandic Personal and Organisation Identity Code"),
+    ('is_vsk', "Icelandic VAT Number"),
+    ('it_codicefiscale', "Italian Tax Code for Individuals"),
+    ('it_iva', "Italian VAT Number"),
+    ('jp_cn', "Japanese Corporate Number"),
+    ('kr_brn', "South Korea Business Registration Number"),
+    ('kr_krn', "South Korean Resident Registration Number"),
+    ('lt_asmens', "Lithuanian Personal Number"),
+    ('lt_pvm', "Lithuanian VAT Number"),
+    ('lu_tva', "Luxembourgian VAT Number"),
+    ('lv_pvn', "Latvian VAT Number"),
+    ('mc_tva', "Monacan VAT Number"),
+    ('md_idno', "Moldavian Company Identification Number"),
+    ('mt_vat', "Maltese VAT Number"),
+    ('mu_nid', "Mauritian National Identifier"),
+    ('mx_rfc', "Mexican Tax Number"),
+    ('my_nric',
+        "Malaysian National Registration Identity Card Number"),
+    ('nl_brin', "Dutch School Identification Number"),
+    ('nl_bsn', "Dutch Citizen Identification Number"),
+    ('nl_btw', "Dutch VAT Number"),
+    ('nl_onderwijsnummer', "Dutch Student Identification Number"),
+    ('no_fodselsnummer',
+        "Norwegian Birth Number, the National Identity Number"),
+    ('no_mva', "Norwegian VAT Number"),
+    ('no_orgnr', "Norwegian Organisation Number"),
+    ('nz_ird', "New Zealand Inland Revenue Department Number"),
+    ('pe_cui', "Peruvian Identity Number"),
+    ('pe_ruc', "Peruvian Company Tax Number"),
+    ('pl_nip', "Polish VAT Number"),
+    ('pl_pesel', "Polish National Identification Number"),
+    ('pl_regon', "Polish Register of Economic Units"),
+    ('pt_nif', "Portuguese VAT Number"),
+    ('py_ruc', "Paraguay Tax Number"),
+    ('ro_cf', "Romanian VAT Number"),
+    ('ro_cnp', "Romanian Numerical Personal Code"),
+    ('ro_onrc', "Romanian ONRC Number"),
+    ('rs_pib', "Serbian Tax Identification"),
+    ('ru_inn', "Russian Tax identifier"),
+    ('se_orgnr', "Swedish Company Number"),
+    ('se_personnummer', "Swedish Personal Number"),
+    ('se_vat', "Swedish VAT Number"),
+    ('si_ddv', "Slovenian VAT Number"),
+    ('sk_dph', "Slovak VAT Number"),
+    ('sk_rc', "Slovak Birth Number"),
+    ('sm_coe', "San Marino National Tax Number"),
+    ('tr_tckimlik', "Turkish Personal Identification Number"),
+    ('us_atin', "U.S. Adoption Taxpayer Identification Number"),
+    ('us_ein', "U.S. Employer Identification Number"),
+    ('us_itin', "U.S. Individual Taxpayer Identification Number"),
+    ('us_ptin', "U.S. Preparer Tax Identification Number"),
+    ('us_ssn', "U.S. Social Security Number"),
+    ('us_tin', "U.S. Taxpayer Identification Number"),
+    ('uy_ruc', "Uruguay Tax Number"),
+    ('ve_rif', "Venezuelan VAT Number"),
+    ('za_idnr', "South African Identity Document Number"),
+    ('za_tin', "South African Tax Identification Number"),
+    ]
+
+
 class Identifier(sequence_ordered(), ModelSQL, ModelView):
     'Party Identifier'
     __name__ = 'party.identifier'
@@ -314,146 +455,7 @@ class Identifier(sequence_ordered(), ModelSQL, ModelView):
     party = fields.Many2One('party.party', 'Party', ondelete='CASCADE',
         required=True, select=True,
         help="The party identified by this record.")
-    type = fields.Selection([
-            (None, ''),
-            ('ad_nrt', "Andorra Tax Number"),
-            ('al_nipt', "Albanian VAT Number"),
-            ('ar_cuit', "Argentinian Tax Number"),
-            ('ar_dni', "Argentinian National Identity Number"),
-            ('at_businessid', "Austrian Company Register"),
-            ('at_tin', "Austrian Tax Identification"),
-            ('at_vnr', "Austrian Social Security Number"),
-            ('au_abn', "Australian Business Number"),
-            ('au_acn', "Australian Company Number"),
-            ('au_tfn', "Australian Tax File Number"),
-            ('be_vat', "Belgian Enterprise Number"),
-            ('bg_egn', "Bulgarian Personal Identity Codes"),
-            ('bg_pnf', "Bulgarian Number of a Foreigner"),
-            ('bg_vat', "Bulgarian VAT Number"),
-            ('br_cnpj', "Brazillian Company Identifier"),
-            ('br_cpf', "Brazillian National Identifier"),
-            ('by_unp', "Belarus VAT Number"),
-            ('ca_bn', "Canadian Business Number"),
-            ('ca_sin', "Canadian Social Insurance Number"),
-            ('ch_ssn', "Swiss Social Security Number"),
-            ('ch_uid', "Swiss Business Identifier"),
-            ('ch_vat', "Swiss VAT Number"),
-            ('cl_rut', "Chilean National Tax Number"),
-            ('cn_ric', "Chinese Resident Identity Card Number"),
-            ('cn_uscc', "Chinese Unified Social Credit Code"),
-            ('co_nit', "Colombian Identity Code"),
-            ('co_rut', "Colombian Business Tax Number"),
-            ('cr_cpf', "Costa Rica Physical Person ID Number"),
-            ('cr_cpj', "Costa Rica Tax Number"),
-            ('cr_cr', "Costa Rica Foreigners ID Number"),
-            ('cu_ni', "Cuban Identity Card Number"),
-            ('cy_vat', "Cypriot VAT Number"),
-            ('cz_dic', "Czech VAT Number"),
-            ('cz_rc', "Czech National Identifier"),
-            ('de_handelsregisternummer', "German Company Register Number"),
-            ('de_idnr', "German Personal Tax Number"),
-            ('de_stnr', "German Tax Number"),
-            ('de_vat', "German VAT Number"),
-            ('dk_cpr', "Danish Citizen Number"),
-            ('dk_cvr', "Danish VAT Number"),
-            ('do_cedula', "Dominican Republic National Identification Number"),
-            ('do_rnc', "Dominican Republic Tax"),
-            ('ec_ci', "Ecuadorian Personal Identity Code"),
-            ('ec_ruc', "Ecuadorian Tax Identification"),
-            ('ee_ik', "Estonian Personal ID Number"),
-            ('ee_kmkr', "Estonian VAT Number"),
-            ('ee_registrikood', "Estonian Organisation Registration Code"),
-            ('es_cif', "Spanish Company Tax"),
-            ('es_dni', "Spanish Personal Identity Codes"),
-            ('es_nie', "Spanish Foreigner Number"),
-            ('es_nif', "Spanish VAT Number"),
-            ('eu_at_02', "SEPA Identifier of the Creditor (AT-02)"),
-            ('eu_vat', "European VAT Number"),
-            ('fi_alv', "Finnish VAT Number"),
-            ('fi_associationid', "Finnish Association Identifier"),
-            ('fi_hetu', "Finnish Personal Identity Code"),
-            ('fi_veronumero', "Finnish Individual Tax Number"),
-            ('fi_ytunnus', "Finnish Business Identifier"),
-            ('fr_nif', "French Tax Identification Number"),
-            ('fr_nir', "French Personal Identification Number"),
-            # TODO: remove from party_siren
-            # ('fr_siren', "French Company Identification Number"),
-            ('fr_tva', "French VAT Number"),
-            ('gb_nhs',
-                "United Kingdom National Health Service Patient Identifier"),
-            ('gb_upn', "English Unique Pupil Number"),
-            ('gb_vat', "United Kingdom (and Isle of Man) VAT Number"),
-            ('gr_amka', "Greek Social Security Number"),
-            ('gr_vat', "Greek VAT Number"),
-            ('gt_nit', "Guatemala Tax Number"),
-            ('hr_oib', "Croatian Identification Number"),
-            ('hu_anum', "Hungarian VAT Number"),
-            ('id_npwp', "Indonesian VAT Number"),
-            ('ie_pps', "Irish Personal Number"),
-            ('ie_vat', "Irish VAT Number"),
-            ('il_hp', "Israeli Company Number"),
-            ('il_idnr', "Israeli Identity Number"),
-            ('in_aadhaar', "Indian Digital Resident Personal Identity Number"),
-            ('in_pan', "Indian Income Tax Identifier"),
-            ('is_kennitala',
-                "Icelandic Personal and Organisation Identity Code"),
-            ('is_vsk', "Icelandic VAT Number"),
-            ('it_codicefiscale', "Italian Tax Code for Individuals"),
-            ('it_iva', "Italian VAT Number"),
-            ('jp_cn', "Japanese Corporate Number"),
-            ('kr_brn', "South Korea Business Registration Number"),
-            ('kr_krn', "South Korean Resident Registration Number"),
-            ('lt_asmens', "Lithuanian Personal Number"),
-            ('lt_pvm', "Lithuanian VAT Number"),
-            ('lu_tva', "Luxembourgian VAT Number"),
-            ('lv_pvn', "Latvian VAT Number"),
-            ('mc_tva', "Monacan VAT Number"),
-            ('md_idno', "Moldavian Company Identification Number"),
-            ('mt_vat', "Maltese VAT Number"),
-            ('mu_nid', "Mauritian National Identifier"),
-            ('mx_rfc', "Mexican Tax Number"),
-            ('my_nric',
-                "Malaysian National Registration Identity Card Number"),
-            ('nl_brin', "Dutch School Identification Number"),
-            ('nl_bsn', "Dutch Citizen Identification Number"),
-            ('nl_btw', "Dutch VAT Number"),
-            ('nl_onderwijsnummer', "Dutch Student Identification Number"),
-            ('no_fodselsnummer',
-                "Norwegian Birth Number, the National Identity Number"),
-            ('no_mva', "Norwegian VAT Number"),
-            ('no_orgnr', "Norwegian Organisation Number"),
-            ('nz_ird', "New Zealand Inland Revenue Department Number"),
-            ('pe_cui', "Peruvian Identity Number"),
-            ('pe_ruc', "Peruvian Company Tax Number"),
-            ('pl_nip', "Polish VAT Number"),
-            ('pl_pesel', "Polish National Identification Number"),
-            ('pl_regon', "Polish Register of Economic Units"),
-            ('pt_nif', "Portuguese VAT Number"),
-            ('py_ruc', "Paraguay Tax Number"),
-            ('ro_cf', "Romanian VAT Number"),
-            ('ro_cnp', "Romanian Numerical Personal Code"),
-            ('ro_onrc', "Romanian ONRC Number"),
-            ('rs_pib', "Serbian Tax Identification"),
-            ('ru_inn', "Russian Tax identifier"),
-            ('se_orgnr', "Swedish Company Number"),
-            ('se_personnummer', "Swedish Personal Number"),
-            ('se_vat', "Swedish VAT Number"),
-            ('si_ddv', "Slovenian VAT Number"),
-            ('sk_dph', "Slovak VAT Number"),
-            ('sk_rc', "Slovak Birth Number"),
-            ('sm_coe', "San Marino National Tax Number"),
-            ('tr_tckimlik', "Turkish Personal Identification Number"),
-            ('us_atin', "U.S. Adoption Taxpayer Identification Number"),
-            ('us_ein', "U.S. Employer Identification Number"),
-            ('us_itin', "U.S. Individual Taxpayer Identification Number"),
-            ('us_ptin', "U.S. Preparer Tax Identification Number"),
-            ('us_ssn', "U.S. Social Security Number"),
-            ('us_tin', "U.S. Taxpayer Identification Number"),
-            ('uy_ruc', "Uruguay Tax Number"),
-            ('ve_rif', "Venezuelan VAT Number"),
-            ('za_idnr', "South African Identity Document Number"),
-            ('za_tin', "South African Tax Identification Number"),
-            ], 'Type')
+    type = fields.Selection('get_types', 'Type')
     type_string = type.translated('type')
     code = fields.Char('Code', required=True)
 
@@ -494,6 +496,13 @@ class Identifier(sequence_ordered(), ModelSQL, ModelView):
         # Migration from 5.8: Rename cn_rit into cn_ric
         cursor.execute(*table.update([table.type], ['cn_ric'],
                 where=(table.type == 'cn_rit')))
+
+    @classmethod
+    def get_types(cls):
+        pool = Pool()
+        Configuration = pool.get('party.configuration')
+        configuration = Configuration(1)
+        return [(None, '')] + configuration.get_identifier_types()
 
     @fields.depends('type', 'code')
     def on_change_with_code(self):
