@@ -1,3 +1,4 @@
+* Configure available identifiers
 * Add ar, at, by, cn, cr, gr, id, il, kr, lt, no, ro and se identifiers
 
 Version 5.8.0 - 2020-11-02
